fixing issues with about page on mobile screens

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -4,7 +4,7 @@
     display: grid;
     row-gap: 2em;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(auto-fill, 1fr);
+    /* grid-template-rows: repeat(auto-fill, 1fr); */
 }
 
 /* grid layout for the containers */
@@ -77,6 +77,7 @@
 
 .publishedContainer .bodyContainer p {
     line-height: 1.9;
+    border: 1px solid black;
 }
 
 @media screen and (min-width: 1024px) {
