--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -15,7 +15,7 @@
 /* Archive images */
 
 .archiveContainer {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* grid-column: 1 / span 12; */
     /* display: grid; */
     /* grid-template-columns: repeat(12, 1fr);
